replace the absolute path from the bootstrap, so it works on all systems...